force-app/main/default/objects/RD1_Settings__mdt/RD1_Settings__mdt.object-meta.xml
<CustomObject>
    <label>RD1 Setting</label>
    <pluralLabel>RD1 Settings</pluralLabel>
</CustomObject>