force-app/main/default/objects/RD1_Settings__mdt/fields/ATS_Security_Enable_Opco__c.field-meta.xml
<CustomField>
    <fullName>ATS_Security_Enable_Opco__c</fullName>
    <label>ATS Secruity Enable Opco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>