force-app/main/default/objects/RD1_Settings__mdt/fields/CC_Recipients__c.field-meta.xml
<CustomField>
    <fullName>CC_Recipients__c</fullName>
    <label>CC Recipients</label>
    <type>TextArea</type>
</CustomField>