force-app/main/default/objects/RD1_Settings__mdt/fields/DoubletimePayMultiplier__c.field-meta.xml
<CustomField>
    <fullName>DoubletimePayMultiplier__c</fullName>
    <label>Doubletime Pay Multiplier</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>