force-app/main/default/objects/RD1_Settings__mdt/fields/Engagement_Placement_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Placement_Notification_Email__c</fullName>
    <label>Engagement Placement Notification Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>