force-app/main/default/objects/RD1_Settings__mdt/fields/GCS_Files_Date__c.field-meta.xml
<CustomField>
    <fullName>GCS_Files_Date__c</fullName>
    <label>GCS Files Date</label>
    <type>Date</type>
</CustomField>