force-app/main/default/objects/RD1_Settings__mdt/fields/GCS_Files_Org__c.field-meta.xml
<CustomField>
    <fullName>GCS_Files_Org__c</fullName>
    <label>GCS Files Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>