force-app/main/default/objects/RD1_Settings__mdt/fields/MeetUser__c.field-meta.xml
<CustomField>
    <fullName>MeetUser__c</fullName>
    <label>MeetUser</label>
    <length>30</length>
    <type>Text</type>
</CustomField>