force-app/main/default/objects/RD1_Settings__mdt/fields/Notify_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Notify_Recipient__c</fullName>
    <label>Notify Recipient</label>
    <type>TextArea</type>
</CustomField>