force-app/main/default/objects/RD1_Settings__mdt/fields/Org_Wide_Email__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_Email__c</fullName>
    <label>Org_Wide_Email</label>
    <type>TextArea</type>
</CustomField>