force-app/main/default/objects/RD1_Settings__mdt/fields/OvertimePayMultiplier__c.field-meta.xml
<CustomField>
    <fullName>OvertimePayMultiplier__c</fullName>
    <label>Overtime Pay Multiplier</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>