force-app/main/default/objects/RD1_Settings__mdt/fields/Placement_BCC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Placement_BCC_Email_Address__c</fullName>
    <label>Placement BCC Email Address</label>
    <type>Email</type>
</CustomField>