force-app/main/default/objects/RD1_Settings__mdt/fields/Recipient_Email_Belux__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email_Belux__c</fullName>
    <label>Recipient Email Belux</label>
    <length>255</length>
    <type>Text</type>
</CustomField>