force-app/main/default/objects/RD1_Settings__mdt/fields/Recipient_Email_Other__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email_Other__c</fullName>
    <label>Recipient Email Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>